compiler/driver/tests/snapshots/codegen_snapshots__snap_date_builtin.snap
---
source: compiler/driver/tests/codegen_snapshots.rs
expression: normalize_ir(& ir)
---
source_filename = "test.ny"
target triple = "nyra-snapshot-host"

@.str.N = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

%Date = type { i32, i32, i32, i32, i32, i32, i32, i32 }

declare i32 @printf(ptr, ...)
declare void @abort()
declare void @date_now(ptr)
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

define i32 @main() {
entry:
  %alloca.N = alloca %Date
  call void @date_now(ptr %alloca.N)
  %gep.N = getelementptr inbounds %Date, %Date* %alloca.N, i32 0, i32 0
  %load.N = load i32, i32* %gep.N
  %fmt.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  call i32 (ptr, ...) @printf(ptr %fmt.N, i32 %load.N)
  %gep.N = getelementptr inbounds %Date, %Date* %alloca.N, i32 0, i32 1
  %load.N = load i32, i32* %gep.N
  %fmt.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  call i32 (ptr, ...) @printf(ptr %fmt.N, i32 %load.N)
  %gep.N = getelementptr inbounds %Date, %Date* %alloca.N, i32 0, i32 2
  %load.N = load i32, i32* %gep.N
  %fmt.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  call i32 (ptr, ...) @printf(ptr %fmt.N, i32 %load.N)
  ret i32 0
}
