compiler/driver/tests/snapshots/codegen_snapshots__snap_enum_match.snap
---
source: compiler/driver/tests/codegen_snapshots.rs
expression: normalize_ir(& ir)
---
source_filename = "test.ny"
target triple = "nyra-snapshot-host"

@.str.N = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

declare i32 @printf(ptr, ...)
declare void @abort()
declare void @llvm.memcpy.p0.p0.i64(ptr, ptr, i64, i1)

define i32 @main() {
entry:
  %alloca.N = alloca i32
  br label %match.chain.N
match.chain.N:
  %cmp.N = icmp eq i32 0, 0
  br i1 %cmp.N, label %match.body.N, label %match.next.N
match.body.N:
  br label %match.payload.ok.N
match.payload.ok.N:
  store i32 1, i32* %alloca.N
  br label %match.end.N
match.next.N:
  %cmp.N = icmp eq i32 0, 1
  br i1 %cmp.N, label %match.body.N, label %match.end.N
match.body.N:
  br label %match.payload.ok.N
match.payload.ok.N:
  store i32 2, i32* %alloca.N
  br label %match.end.N
match.end.N:
  %load.N = load i32, i32* %alloca.N
  %fmt.N = getelementptr inbounds i8, ptr @.str.N, i64 0
  call i32 (ptr, ...) @printf(ptr %fmt.N, i32 %load.N)
  ret i32 0
}
